...
            let party = parties.first.require()
            let export = try $0.export(withEvent: event, withParty: party, withContext: context)
            return try export.record(in: context)
        }
    }
    private func unpackEvents() throws -> [JSONEvent] {
        let data = try contentsOf(resource: "Events", extension: "json")
        let decoder = JSONDecoder()
        decoder.dateDecodingStrategy = .formatted(eventDateFormatter)
        return try decoder.decode([JSONEvent].self, from: data)
    }
    private let eventDateFormatter: DateFormatter = {
        let dateFormatter = DateFormatter()
...
  let ability: String
  let group: String
  let performers: [JSONPerformer]
  enum CodingKeys: String, CodingKey {
    case ability = "Ability"
    case group = "Group"
    case performers = "Performers"
  }
  init(from decoder: Decoder) throws {
    let values = try decoder.container(keyedBy: CodingKeys.self)
    let ability = try values.decode(String.self, forKey: .ability)
    let group = try values.decode(String.self, forKey: .group)
    let performers = try values.decode([JSONPerformer].self, forKey: .performers)
...
